Feat: 문제 5번 - 50000, 10000, 5000, 1000, 500, 100, 50, 10, 1원 권 각 몇 개로 반환되는지 구하는 기능 작성